Reapply "feat: add minimal dark mode, resolves #2"
This reverts commit 1a7576b10eb570ecb0ce06abc275000b87b075f2.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,3 +506,20 @@ canvas{
   margin-top: -60px;
   visibility: hidden;
 }
+/* Color Themes */
+.black-theme{
+	color: white;
+	background-color: black;
+}
+.red-theme{
+	color: white;
+	background-color: Brown;
+}
+.green-theme{
+	color: white;
+	background-color: DarkSlateGrey;
+}
+.blue-theme{
+	color: white;
+	background-color: #005897;
+}
